maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: ';' expected but ',' found.
  var x:Int, y:Int = case(0), case(1);
           ^